--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.5",
+    "dotenv": "^16.0.0",
+    "dotenv-webpack": "^7.1.0",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "react": "^18.0.0",
